apps/kami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kami-service
  namespace: galaxy
spec:
  selector:
    name: kami
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
