apps/kami/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kami-ingress
  namespace: galaxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: galaxy-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: kami.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kami-service
                port:
                  number: 8888
  tls:
    - secretName: kami-tls
      hosts:
        - kami.pinwheel.fan
